<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDarkColor">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_costume"
                android:textSize="24sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.MaterialToolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="16dp"
            android:layout_toStartOf="@+id/fabAdd"
            app:backgroundTint="@color/secondaryColor"
            app:srcCompat="@drawable/ic_camera"
            app:tint="@android:color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/secondaryColor"
            app:srcCompat="@drawable/ic_done"
            app:tint="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/fabAdd"
            android:orientation="vertical"
            android:padding="@dimen/gap1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCostume"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginEnd="@dimen/gap0"
                    android:background="@android:color/black"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/image_placeholder"
                    android:contentDescription="@string/image"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_text_name"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine|textImeMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGrpDifficulty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginTop="@dimen/gap1"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipEasy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/easy"
                            app:chipBackgroundColor="@color/secondaryLightColor" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/medium"
                            app:chipBackgroundColor="@color/secondaryLightColor" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipHard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/hard"
                            app:chipBackgroundColor="@color/secondaryLightColor" />

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutMaterial"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap1"
                android:hint="@string/hint_text_material"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconContentDescription="Tap here"
                app:endIconDrawable="@drawable/ic_add_circle"
                app:endIconMode="custom"
                app:endIconTint="@color/secondaryColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMaterial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGrpMaterials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap1">

            </com.google.android.material.chip.ChipGroup>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="@dimen/gap1"
                android:background="?android:attr/listDivider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutSteps"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap1"
                android:hint="@string/hint_text_instructions"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textImeMultiLine"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor"
        android:contentDescription="@string/expanded_image"
        android:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>